test/must_fail/api/must_fail_file_exists_no_args.ngjs
#!/usr/bin/env ngspicejs
// single string arg needed
// linter: ngspicejs-lint
"use strict";

file_exists();

